[package]
name = "axum-crud-price-rest-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.4" }
tokio = { version = "1.0", features = ["full"] }
axum-test = "14.4.0"

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3.17"
tower = "0.4.13"
serde_json = "1.0.114"

